--- a/css/aula3/aula3.css
+++ b/css/aula3/aula3.css
@@ -18,10 +18,11 @@ body{
 
 @font-face {
   font-family: 'bigshot';
-  src: url('./fonts/big-shot.ttf') format('truetype');
+  src: url('../fonts/big-shot.ttf') format('truetype');
   font-weight: normal;
   font-style: normal;
 }
+
 .tenna{
     width: 500px;
     height: 500px;
